--- a/src/millionaire/MainWindow.form
+++ b/src/millionaire/MainWindow.form
@@ -197,12 +197,18 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x417;&#x432;&#x43e;&#x43d;&#x43e;&#x43a; &#x434;&#x440;&#x443;&#x433;&#x443;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCallFriendActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnTakeMoney">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x417;&#x430;&#x431;&#x440;&#x430;&#x442;&#x44c; &#x434;&#x435;&#x43d;&#x44c;&#x433;&#x438;"/>
         <Property name="name" type="java.lang.String" value="btnTakeMoney" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTakeMoneyActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
